--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc app.ts",
-    "start": "ts-node app.ts"
+    "start": "ts-node app.ts",
+    "start:ds": "ts-node ds.ts"
   },
   "author": "",
   "license": "ISC",
