--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc app.ts",
-    "start": "ts-node app.ts",
-    "start:ds": "ts-node ds.ts"
+    "tscode": "tsc src/app.ts",
+    "build": "webpack",
+    "start": "ts-node src/app.ts",
+    "start:ds": "ts-node src/ds.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.17",
     "nodemon": "^2.0.20",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
